--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,11 @@
 !*.py
 !requirements.txt
 !LICENSE
-!CHANGELOG.md
-!STATUS.md
-!SESSION-SUMMARY-*.md
+
+# Explicitly exclude documentation with customer data
+CHANGELOG.md
+STATUS.md
+SESSION-SUMMARY-*.md
 
 # Explicitly exclude sensitive/output files (redundant but clear)
 *.pdf
